--- a/CSS/style.css
+++ b/CSS/style.css
@@ -73,6 +73,18 @@ a:hover{
     left: 0%;
 }
 
+.exit{
+    position: absolute;
+    width: 11%;
+    height: 7%;
+    left: 3%;
+    top: 5%;
+    border: 1px solid white;
+    background-color: black;
+    padding: none;
+    font-size: 14px;
+}
+
 .orbit{
     position: absolute;
     background: transparent;
